<resources>
    <string name="app_name">SignUpForm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!!</string>
    <string name="button_ok">OK</string>
    <string name="button_submit">Submit</string>
    <string name="username">Username</string>
    <string name="username_hint">Please Enter Your Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Please Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Please Confirm Your Password</string>
    <string name="button_cancel">Cancel</string>
    <string name="random">Random</string>

</resources>
