<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.qalagy.signupform.LoginActivity"
    android:padding="16dp"
    tools:showIn="@layout/activity_login">

   <LinearLayout
       android:id="@+id/form_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <LinearLayout
           android:id="@+id/username_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_weight="25"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/username" />

           <EditText
               android:layout_weight="75"
               android:hint="@string/username_hint"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/username_hint" />

       </LinearLayout>

       <LinearLayout
           android:id="@+id/password_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_weight="25"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/password" />

           <EditText
               android:layout_weight="75"
               android:hint="@string/username_hint"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/password_hint" />

       </LinearLayout>

       <LinearLayout
           android:id="@+id/confirm_password_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_weight="25"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/confirm_password" />

           <EditText
               android:layout_weight="75"
               android:hint="@string/username_hint"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/confirm_password_hint" />

       </LinearLayout>

   </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_alignRight="@+id/form_layout"
        android:layout_below="@+id/form_layout"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit" />

</RelativeLayout>
